--- a/App/src/auth/Auth.css
+++ b/App/src/auth/Auth.css
@@ -39,13 +39,13 @@
 
 .auth-container form input:focus {
     outline: none;
-    border-color: #d32f2f;
+    border-color: cornflowerblue;
     box-shadow: 0 0 0 2px rgba(211, 47, 47, 0.1);
 }
 
 .error-message {
     background-color: #ffebee;
-    color: #d32f2f;
+    color: cornflowerblue;
     padding: 10px;
     border-radius: 4px;
     margin-bottom: 15px;
@@ -56,7 +56,7 @@
 .auth-box button {
     width: 100%;
     padding: 12px;
-    background: #d32f2f;
+    background: cornflowerblue;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -68,7 +68,7 @@
 }
   
 .auth-box button:hover {
-    background: #b71c1c;
+    background:cornflowerblue;
 }
   
 .auth-box p {
@@ -77,7 +77,7 @@
 }
   
 .auth-box p span {
-    color: #d32f2f;
+    color: cornflowerblue;
     cursor: pointer;
     margin-left: 5px;
     font-weight: 500;
